Use thread pool, prevent path traversal